--- a/style.css
+++ b/style.css
@@ -212,7 +212,8 @@ nav .navigation ul li a:hover{
     text-align: center;
     font-size: 18px;
     background: #eee;
-    margin-top: 10px;
+    height: 250px;
+   
    
 
     /* Center slide text vertically */
@@ -230,7 +231,7 @@ nav .navigation ul li a:hover{
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-    padding: 25px;
+    padding: 0px 25px 0px 25px;
     
    
   }
@@ -396,14 +397,42 @@ nav .navigation ul li a:hover{
         color: #fff;
     }
 }
+
+
+
+
 @media only screen and (max-width:687px){
     #student-detail{
-
-       
         font-size: 15px;
         
     }
+    .swiper-slide img {
+        display: block;
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+        border-radius: 50%;
+      }
+      .swiper-slide h3{
+        font-size: 0.8rem;
+        font-weight: 600;
+        color: rgb(46, 46, 59);
+        padding: 5px 0 5px 0;
+       
+      }
+      .swiper-slide p{
+        font-size: 0.5rem;
+        font-weight: 400;
+        color: rgb(70, 70, 87);
+        
+      }
 }
+
+
+
+
+
+
 @media only screen and (max-width:519px){
     #student-detail{
 
@@ -411,6 +440,27 @@ nav .navigation ul li a:hover{
         font-size: 09px;
         
     }
+
+    .swiper-slide img {
+        display: block;
+        width: 60px;
+        height: 60px;
+        object-fit: cover;
+        border-radius: 50%;
+      }
+      .swiper-slide h3{
+        font-size: 0.8rem;
+        font-weight: 600;
+        color: rgb(46, 46, 59);
+        padding: 5px 0 5px 0;
+       
+      }
+      .swiper-slide p{
+        font-size: 0.5rem;
+        font-weight: 400;
+        color: rgb(70, 70, 87);
+        
+      }
 }
   
 
