--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ nav .navigation ul li a:hover{
   }
   .owl-carousel-heading h1{
     text-align: center;
-    margin-top: 20px;
+    margin-top: 80px;
     /* margin-bottom: 20px; */
     background-color: #eee;
     padding: 30px 0px 10px 0px;
@@ -440,11 +440,10 @@ nav .navigation ul li a:hover{
         font-size: 09px;
         
     }
-
     .swiper-slide img {
         display: block;
-        width: 60px;
-        height: 60px;
+        width: 80px;
+        height: 80px;
         object-fit: cover;
         border-radius: 50%;
       }
@@ -459,6 +458,29 @@ nav .navigation ul li a:hover{
         font-size: 0.5rem;
         font-weight: 400;
         color: rgb(70, 70, 87);
+        
+      }
+
+   
+}
+
+@media only screen and(max-width:350px){
+    .swiper-slide img {
+        display: block;
+        width: 40px;
+        height: 40px;
+        object-fit: cover;
+        border-radius: 50%;
+      }
+      .swiper-slide h3{
+        font-size: 0.4rem;
+        font-weight: 600;
+        color: rgb(46, 46, 59);
+        padding: 5px 0 5px 0;
+       
+      }
+      .swiper-slide p{
+       display: none;
         
       }
 }
