--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ nav .navigation ul li a:hover{
 }
 #home h2{
     color: white;
-    font-size: 2.6rem;
+    font-size: 2.3rem;
     letter-spacing: 1px;
 }
 #home p{
@@ -118,6 +118,7 @@ nav .navigation ul li a:hover{
 }
 #home .btn{
     margin-top: 30px;
+    height: 40px;
 
 }
 #home a.blue{
@@ -426,6 +427,17 @@ nav .navigation ul li a:hover{
         color: rgb(70, 70, 87);
         
       }
+      #home h2{
+        color: white;
+        font-size: 1.8rem;
+        letter-spacing: 1px;
+    }
+    #home p{
+        width: 50%;
+        color: white;
+        font-size: 0.9rem;
+        line-height: 25px;
+    }
 }
 
 
